--- a/DIDemo/angular.json
+++ b/DIDemo/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "HttpClientDemo": {
+    "DIDemo": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/HttpClientDemo",
+            "outputPath": "dist/DIDemo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +24,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -64,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "HttpClientDemo:build"
+            "browserTarget": "DIDemo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "HttpClientDemo:build:production"
+              "browserTarget": "DIDemo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "HttpClientDemo:build"
+            "browserTarget": "DIDemo:build"
           }
         },
         "test": {
@@ -90,7 +89,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -113,16 +111,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "HttpClientDemo:serve"
+            "devServerTarget": "DIDemo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "HttpClientDemo:serve:production"
+              "devServerTarget": "DIDemo:serve:production"
             }
           }
         }
       }
-    }
-  },
-  "defaultProject": "HttpClientDemo"
+    }},
+  "defaultProject": "DIDemo"
 }
